Add tutorial messages

--- a/app/app.css
+++ b/app/app.css
@@ -70,7 +70,11 @@ Button {
 }
 
 .invisible {
-    visibility: hidden;
+    visibility: collapse;
+}
+
+.visible {
+    visibility: visible;
 }
 
 .likedBackground{
