--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -53,17 +53,20 @@
                         [queryParams]="{ source: 'itemsShown', liked: itemsLiked[index], disliked: itemsDisliked[index], saved: itemsSaved[index]}" 
                         padding="0 0 0 0" >
                             <Image colspan="3" [src]="item.img[0]" height="186" ios:stretch="aspectFill" ></Image>
-                            <Label column="2" [class]="itemsLiked[index] ? 'far t-36' : 'invisible'" style="color: red;" text="&#xf004;" verticalAlignment="top"></Label>
+                            <StackLayout column="2" style="padding-right:2;">
+                            <Label [class]="itemsLiked[index] ? 'far t-36' : 'invisible'" style="color: green;" text="&#xf004;" ></Label>
+                            <Label [class]="itemsSaved[index] ? 'far t-36' : 'invisible'" style="color: green;" text="&#xf0c7;" ></Label>
+                            </StackLayout>
                         </GridLayout>
                     </GridLayout>
                     </ng-template>
                     
                     <lv:RadListView.itemSwipeTemplate>
                         <GridLayout *tkListItemSwipeTemplate columns="auto, *, auto">
-                            <StackLayout id="mark-view" col="0" style="background-color:green;" (tap)="onLeftSwipeClick($event)" paddingRight="16" orientation="horizontal">
+                            <StackLayout id="mark-view" col="0" style="background-color:red;" (tap)="onLeftSwipeClick($event)" orientation="horizontal">
                                 <Label horizontalAlignment="center" class="far" style="font-size: 50em; color: black" text="&#xf165;"></Label>
                             </StackLayout>
-                            <StackLayout id="delete-view" col="2" style="background-color: red;" (tap)="onRightSwipeClick($event)"  paddingLeft="23" paddingRight="2" orientation="horizontal">
+                            <StackLayout id="delete-view" col="2" style="background-color: green;" (tap)="onRightSwipeClick($event)" orientation="horizontal">
                                 <Label horizontalAlignment="center" class="far" style="font-size: 50em; color: black" text="&#xf004;"></Label>
                             </StackLayout>
                         </GridLayout>
@@ -86,7 +89,7 @@
                 </StackLayout>
 
                 <!--Category Tutorial-->
-                <StackLayout row="0" rowspan="1" col="6" colspan="3" [class]="tutorialHide ? 'invisible' : 'visible'" style="background-image: ~/item/tutorialBackground2.png; background-repeat: no-repeat;
+                <StackLayout row="0" rowspan="1" col="6" colspan="3" [class]="tutorialHide ? 'invisible' : 'visible'" style="font-weight: bold; color: black; background-image: ~/item/tutorialBackground2.png; background-repeat: no-repeat;
                 background-size: 100% 100%;">
                     <Label size="20" textWrap="true" textAlignment="center" text="You can sort by any category up here" style="padding-top: 10"></Label>
                 </StackLayout>
@@ -96,10 +99,10 @@
 
     <!--Outfit Creator-->
     <TabContentItem>
-        <StackLayout padding="2 0 2 2" backgroundColor="gray" margin="0">
+        <StackLayout padding="2 0 2 6" backgroundColor="gray" margin="0">
             <GridLayout rows="*,*,*,*,*,*,*,*,*,*,*,*" columns="*,*,*,*,*,*,*,*,*,*">
-                    <Button row="0" column="0" colspan="3" [text]="filterBySaved? 'Saved' : 'Likes'" (tap)="swapFilterSaved()"></Button>
-                    <RadListView row="0" column="3" colspan="6" [items]="categories" orientation="horizontal" height=50 
+                    <Button row="0" column="0" colspan="4" [text]="filterBySaved? 'Saved' : 'Likes'" (tap)="swapFilterSaved()" width="100%"></Button>
+                    <RadListView style="margin-right:15;" row="0" column="4" colspan="7" [items]="categories" orientation="horizontal" height=50 width="100%"
                     multipleSelection="false" selectionBehavior="Press" 
                     (itemSelected)="outfitCategorySelected($event)" (itemDeselected)="outfitCategoryDeselected($event)">
                     <ListViewGridLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="90" itemHeight="60" spanCount="1"></ListViewGridLayout>
@@ -109,34 +112,34 @@
                     </ng-template>
                     </RadListView>
                 
-                <!--Liked or Saved List-->
-                <RadListView col="0" colspan="10" row="1" rowspan="3" [items]="filterBySaved ? userSaved : userLikes" orientation="Horizontal" height=50 
-                    multipleSelection="false" selectionBehavior="Press" height ="200"
+                <!--Liked or Saved List outfitCreaterList-->
+                <RadListView col="0" colspan="4" row="1" rowspan="11" [items]="outfitCreaterList" orientation="Vertical" height=50 
+                    multipleSelection="false" selectionBehavior="Press" height ="100%"
                     (itemSelected)="createrSelected($event)">
-                        <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
-                        <ng-template let-item="item" let-index="index" height="60%" width="60%" >
+                        <ListViewLinearLayout tkListViewLayout scrollDirection="Vertical"></ListViewLinearLayout>
+                        <ng-template let-item="item" let-index="index">
                             <StackLayout>
-                                <Image [src]="item.img[0]" height="125" width = "125" ios:stretch="aspectFill"></Image>
+                                <Image [src]="item.img[0]" height="100" width = "100" ios:stretch="aspectFill"></Image>
                                 <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true"></Label>
                             </StackLayout>
                         </ng-template>
                 </RadListView>    
                 
-                <RadListView row="5" rowspan="3" col="0" colspan="10" [items]="currentlyChosen" orientation="Vertical" height="200" selectionBehavior="Press" (itemSelected)="createrDeselected($event)">
-                    <ListViewGridLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="150" itemHeight="150" spanCount="1"></ListViewGridLayout>
+                <RadListView row="1" rowspan="10" col="4" colspan="10" style="margin-right: 5;" [items]="currentlyChosen" orientation="Vertical" height="100%" selectionBehavior="Press" (itemSelected)="createrDeselected($event)">
+                    <ListViewGridLayout style="padding-right: 10;" tkListViewLayout scrollDirection="Vertical" itemWidth="120" itemHeight="150" spanCount="2"></ListViewGridLayout>
                     <ng-template let-item="item">
                         <StackLayout>
                             <Image [src]="item.img[0]" height="100" width = "100" ios:stretch="aspectFill"></Image>
-                            <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true"></Label>
+                            <Label textAlignment = "center" size = "13" width="100%" [text]="item.name" textWrap="true"></Label>
                         </StackLayout>
                     </ng-template>
                 </RadListView>
 
-                <StackLayout row="11" col="0" colspan="10">
-                    <button verticalAlignment = "bottom" text="Save Outfit"></button>
+                <StackLayout row="11" col="4" colspan="10" style="padding-bottom: 10;">
+                    <button verticalAlignment = "bottom" text="Save Outfit" (tap)="saveOutfit()"></button>
                 </StackLayout>
                 <!--[class]="outfitTutorialHide ? 'invisible' : 'visible'"-->
-                <StackLayout row="4" rowspan="1" col="1" colspan="8" style="padding-left: 5;padding-right: 5; padding-bottom: 10; background-image: ~/item/tutorialBackground2.png; background-repeat: no-repeat; background-size: 100% 100%;">
+                <StackLayout [class]="outfitTutorialHide ? 'invisible' : 'visible'" row="1" rowspan="1" col="4" colspan="8" style="font-weight: bold; color: black; padding-left: 5;padding-right: 5; padding-bottom: 10; background-image:  ~/item/tutorialBackground2.png; background-repeat: no-repeat; background-size: 100% 100%;">
                     <Label style="font-size: 12; padding-top: 10;" textAlignment="center" textWrap="true" text="Tap your clothes, build your perfect outfit"></Label>
                 </StackLayout>
 
@@ -168,13 +171,23 @@
                             <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
                             <ng-template let-item="item" let-index="index">
                                 <StackLayout [nsRouterLink]="['detail', index]" 
-                                [queryParams]="{ source: 'userLikes', liked: true, disliked: false }">
+                                [queryParams]="{ source: 'userSaved', liked: true, disliked: false }">
                                     <Image [src]="item.img[0]" height="80%" width = "80%" ios:stretch="aspectFill"></Image>
                                     <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true"></Label>
                                 </StackLayout>
                             </ng-template>
                         </RadListView>
                         <Button text = "My Outfits"></Button>
+                        <RadListView height ="200" row="0" orientation="horizontal" [items]="myOutfits" margin-left = "2" margin-right="2">
+                            <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
+                            <ng-template let-item="item" let-index="index">
+                                <StackLayout [nsRouterLink]="['detail', index]" 
+                                [queryParams]="{ source: 'userSaved', liked: true, disliked: false }">
+                                    <Image [src]="item.img[0]" height="80%" width = "80%" ios:stretch="aspectFill"></Image>
+                                    <Label textAlignment = "center" size = "15" width="100%" [text]="item.outfitID" textWrap="true"></Label>
+                                </StackLayout>
+                            </ng-template>
+                        </RadListView>
                 </StackLayout>
             </ScrollView>
         </Gridlayout>
