--- a/app/login.component.html
+++ b/app/login.component.html
@@ -1,26 +1,26 @@
-<FlexboxLayout class="page">
+<FlexboxLayout class="page" (loaded)="startAnimation($event)" [@openClose]="isOpen ? 'open' : 'closed'">
     <StackLayout class="form">
       <ActivityIndicator [busy]="isBusy" (busyChange)="onBusyChanged($event)"></ActivityIndicator>
       <StackLayout class="input-field">
         <TextField [(ngModel)]="credentials.username" keyboardType="email" autocorrect="false" autocapitalizationType="none" hint="Email" ...></TextField>
-        <Label text="&#xf058; Save Email?" [class]="checkYes ? 'fas' : 'far'" (tap)="saveEmailOption()"></Label>
+        <Label text="&#xf058; Save Email?" [class]="checkYes ? 'fas' : 'far'" (tap)="saveEmailOption()" style="text-align: center; padding-bottom: 10;"></Label>
       </StackLayout>
   
       <StackLayout class="input-field">
         <TextField [(ngModel)]="credentials.password" autocorrect="false" secure="true" autocapitalizationType="none" hint="Password" ...></TextField>
-        <Label text="&#xf058; Save Password?" [class]="checkYesPW ? 'fas' : 'far'" (tap)="savePWOption()"></Label>
+        <Label text="&#xf058; Save Password?" [class]="checkYesPW ? 'fas' : 'far'" (tap)="savePWOption()" style="text-align: center; padding-bottom: 10;"></Label>
       </StackLayout>
   
       <StackLayout *ngIf="!isLoggingIn" class="input-field">
         <TextField [(ngModel)]="confirm" autocorrect="false" secure="true" autocapitalizationType="none" hint="Confirm password" ...></TextField>
       </StackLayout>
   
-      <Button [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()"></Button>
-      <Label *ngIf="isLoggingIn" text="Forgot your password?"></Label>
+      <Button id="login" [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()"></Button>
+      <Label *ngIf="isLoggingIn" text="Forgot your password?" style="text-align: center;"></Label>
     </StackLayout>
   
     <Label (tap)="toggleForm()">
-      <FormattedString>
+      <FormattedString id="swapLogin">
         <Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
         <Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
       </FormattedString>
