Login screen improvements on the eyes

--- a/app/login.component.html
+++ b/app/login.component.html
@@ -1,28 +1,32 @@
-<FlexboxLayout class="page" (loaded)="startAnimation($event)" [@openClose]="isOpen ? 'open' : 'closed'">
-    <StackLayout class="form">
-      <ActivityIndicator [busy]="isBusy" (busyChange)="onBusyChanged($event)"></ActivityIndicator>
-      <StackLayout class="input-field">
-        <TextField [(ngModel)]="credentials.username" keyboardType="email" autocorrect="false" autocapitalizationType="none" hint="Email" ...></TextField>
-        <Label text="&#xf058; Save Email?" [class]="checkYes ? 'fas' : 'far'" (tap)="saveEmailOption()" style="text-align: center; padding-bottom: 10;"></Label>
+<GridLayout rows="*,*,*,*,*,*,*,*,*,*" cols="*,*,*,*,*,*,*,*,*,*" loaded="startAnimations($event)">
+  <Image order="1" (loaded)="firstImage($event)" row="0" rowspan="10" col="0" colspan="10" loadMode="async" height="25%" width="25%" stretch="aspectFit"></Image>
+  <Image order="1" (loaded)="secondImage($event)" row="0" rowspan="10" col="0" colspan="10" loadMode="async" height="25%" width="25%" stretch="aspectFit"></Image>
+      <StackLayout order="0" class="form" row="0" rowspan="10" col="0" colspan="10" style="background-image: ~/FashionPic/IMG_6513.PNG">
+        <ActivityIndicator [busy]="isBusy" (busyChange)="onBusyChanged($event)"></ActivityIndicator>
+        <StackLayout class="input-field" style="padding-top:15;">
+          <TextField [(ngModel)]="credentials.username" keyboardType="email" autocorrect="false" autocapitalizationType="none" hint="Email" ...></TextField>
+          <Label text="&#xf058; Save Email?" [class]="checkYes ? 'fas' : 'far'" (tap)="saveEmailOption()" style="text-align: center; padding-bottom: 10;"></Label>
+        </StackLayout>
+    
+        <StackLayout class="input-field" style="padding-top:15; padding-bottom: 15;">
+          <TextField [(ngModel)]="credentials.password" autocorrect="false" secure="true" autocapitalizationType="none" hint="Password" ...></TextField>
+          <StackLayout orientation="Horizontal">
+            <Label text="&#xf058; Save Password?" [class]="checkYesPW ? 'fas' : 'far'" (tap)="savePWOption()" style="text-align: center; padding-right: 5; padding-left: 20;"></Label>
+            <Label *ngIf="isLoggingIn" text="Forgot your password?" style="text-align: center;"></Label>
+          </StackLayout>
+        </StackLayout>
+    
+        <StackLayout *ngIf="!isLoggingIn" class="input-field">
+          <TextField [(ngModel)]="confirm" autocorrect="false" secure="true" autocapitalizationType="none" hint="Confirm password" ...></TextField>
+        </StackLayout>
+    
+        <Button id="login" [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()"></Button>
+      
+        <Label (tap)="toggleForm()" style="text-align: center;">
+          <FormattedString id="swapLogin">
+            <Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
+            <Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
+          </FormattedString>
+        </Label>
       </StackLayout>
-  
-      <StackLayout class="input-field">
-        <TextField [(ngModel)]="credentials.password" autocorrect="false" secure="true" autocapitalizationType="none" hint="Password" ...></TextField>
-        <Label text="&#xf058; Save Password?" [class]="checkYesPW ? 'fas' : 'far'" (tap)="savePWOption()" style="text-align: center; padding-bottom: 10;"></Label>
-      </StackLayout>
-  
-      <StackLayout *ngIf="!isLoggingIn" class="input-field">
-        <TextField [(ngModel)]="confirm" autocorrect="false" secure="true" autocapitalizationType="none" hint="Confirm password" ...></TextField>
-      </StackLayout>
-  
-      <Button id="login" [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()"></Button>
-      <Label *ngIf="isLoggingIn" text="Forgot your password?" style="text-align: center;"></Label>
-    </StackLayout>
-  
-    <Label (tap)="toggleForm()">
-      <FormattedString id="swapLogin">
-        <Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
-        <Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
-      </FormattedString>
-    </Label>
-  </FlexboxLayout>
+    </GridLayout>
