--- a/app/app.css
+++ b/app/app.css
@@ -138,3 +138,20 @@ Button {
 #radListSelected{
     border-radius: 50%;
 }
+
+#userList{
+    border-width: 3;
+    border-radius: 10%;
+    background-color: lightgray;
+}
+
+.userListText{
+    color: black;
+    font-size: 15;
+}
+
+SearchBar{
+    border-width:3;
+    border-radius:10%;
+}
+
