--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -10,7 +10,7 @@
 
 <GridLayout columns="*,*,*,*,*,*,*,*,*,*" rows="*,*,*,*,*,*,*,*,*,*">
     <StackLayout col="0" colspan="10" row=0 rowspan=10>
-        <RadListView orientation="horizontal" [items]="item.img"
+        <RadListView orientation="horizontal" [items]="item.img" swipeActions="true"
             (scrollDragEnded)="onScrollDragEnded($event)" (scrollEnded)="onScrollEnded($event)"
             width="100%" height="350">
             <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="350" itemHeight="350" [spanCount]="1"></ListViewLinearLayout>
